test/tests/stages/6_statements_and_conditional_expressions/valid/extra_credit/label_token.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[18]:
  int
  identifier(main)
  (
  void
  )
  {
  goto
  identifier(_foo_1_)
  ;
  return
  const int(0)
  ;
  identifier(_foo_1_)
  :
  return
  const int(1)
  ;
  }
