test/tests/stages/6_statements_and_conditional_expressions/invalid_semantics/extra_credit/goto_missing_label.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[13]:
  int
  identifier(main)
  (
  void
  )
  {
  goto
  identifier(label)
  ;
  return
  const int(0)
  ;
  }
